test gradient bg_onyx

--- a/doc_css.ipynb
+++ b/doc_css.ipynb
@@ -35,13 +35,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    " --bg-gradient-onyx: -> cor do fundo\n",
+    " --bg-gradient-onyx: -> cor do fundo da imagem\n",
     "\n",
-    " --bg-gradient-onyx: linear-gradient(\n",
-    "    to bottom right, \n",
-    "    hsl(240, 1%, 25%) 3%, \n",
-    "    hsl(0, 0%, 19%) 97%\n",
-    "  );\n",
+    " --bg-gradient-onyx:\n",
     "  --bg-gradient-jet: linear-gradient(\n",
     "    to bottom right, \n",
     "    hsla(240, 1%, 18%, 0.251) 0%, \n",
