--- a/index_test.ipynb
+++ b/index_test.ipynb
@@ -195,7 +195,7 @@
     "                </ul>\n",
     "                <!--------------------------------------------------------------------------------------------------------------->\n",
     "\n",
-    "                <div class=\"separator\"></div> <!-- linha parar separar os icones de contatos/ linkedinn e github-->\n",
+    "                <div class=\"separator\"></div> <!-- linha parar separar os icones de contatos/ linkedin e github-->\n",
     "                <!--------------------------------------------------------------------------------------------------------------->\n",
     "\n",
     "                <ul class=\"social-list\">\n",
@@ -218,11 +218,11 @@
     "\n",
     "       <!--///////////////////////////////////////////// FIM DA BARRA LATERAL //////////////////////////////////////////////-->\n",
     "\n",
-    "       <!-------------------------------------Inicio do conteudo principal - #main-content----------------------------------------------------------> \n",
+    "       <!-------------------------------------Inicio do conteudo principal - #main-content ----------------------------------------------------------> \n",
     "\n",
-    "       <div class=\"main-content\">\n",
+    "        <div class=\"main-content\">\n",
     "\n",
-    "        <!----------------------------------------#NAVBAR - MENU--------------------------->\n",
+    "            <!----------------------------------------#NAVBAR - MENU--------------------------->\n",
     "            <nav class=\"navbar\">\n",
     "                <ul class=\"navbar-list\">\n",
     "\n",
@@ -255,10 +255,10 @@
     "\n",
     "            <!-------------------------------------FIM DO MENU-------------------------------------------------------------------------->\n",
     "\n",
-    "            <!--------------------------------INFORMAÇÕES DOS MENUS------------------------------------------------->\n",
+    "            <!--------------------------------INFORMAÇÕES DO MENU------------------------------------------------->\n",
     "\n",
     "            <!--****** ABOUT *****-->\n",
-    "            <article class=\"about active\" data-page=\"about\"> <!--toda página idependente d um menu se inicia com um <article></article>-->\n",
+    "            <article class=\"about active\" data-page=\"about\"> <!--toda página se inicia com um <article></article>-->\n",
     "               \n",
     "                <!--titulo da pagina About-->\n",
     "                <head>\n",
@@ -284,13 +284,212 @@
     "\n",
     "                </section>\n",
     "\n",
-    "                \n",
+    "                <!-- service -->\n",
     "\n",
+    "                <section class=\"service\">\n",
     "\n",
+    "                    <!-- segundo titulo da página-->\n",
+    "                    <h3 class=\"h3 service-title\">what i'm doing</h3>\n",
     "\n",
+    "                    <!-- LISTA dos meus sprojetos em processo -->\n",
+    "                    <ul class=\"service-list has-scrollbar\">\n",
+    "\n",
+    "                        <li class=\"service-item\">\n",
+    "\n",
+    "                            <!-- icone do primeiro projeto -->\n",
+    "                            <div class=\"service-icon-box\">\n",
+    "                                <img src=\"./assets/images/projeto-placa-icon.png\" alt=\"design icon\" width=\"40\">\n",
+    "                            </div>\n",
+    "\n",
+    "                            <!-- caixa com o titulo e descrição -->\n",
+    "                            <div class=\"service-content-box\">\n",
+    "                                <h4 class=\"service-item-title\">Board Design</h4>\n",
+    "\n",
+    "                                <P class=\"service-item-text\">\n",
+    "                                 The Placa Project aims to develop a complete system for the detection and recognition of passenger car license plates in condominiums, automating the entry and access authorization process.\n",
+    "                                </P>\n",
+    "                            </div>\n",
+    "\n",
+    "                        </li>\n",
+    "\n",
+    "                    </ul>\n",
+    "                </section>\n",
+    "\n",
+    "                <!-- testimonials -->\n",
+    "                <section class=\"Testimonials\">\n",
+    "                    <!-- terceiro título - testemunhas -->\n",
+    "                    <h3 class=\"h3 testimonials-title\">Testimonials</h3>\n",
+    "\n",
+    "                    <!-- lista de testemunhas com uma barra de rolagem -->\n",
+    "                    <ul class=\"testimonials-list has-scrollbar\">\n",
+    "                        <!-- item da lista -->\n",
+    "                        <li class=\"testimonials-item\">\n",
+    "\n",
+    "                            <div class=\"content-card\" data-testimonials-item>\n",
+    "                                <!-- figura da testemunha -->\n",
+    "                                <figure class=\"testimonials-avatar-box\">\n",
+    "                                    <img src=\"#\" alt=\"Daniel lewis\" width=\"60\" data-testimonials-avatar>\n",
+    "                                </figure>\n",
+    "\n",
+    "                                <!-- nome da testemunha -->\n",
+    "                                <h4 class=\"h4 testimonials-item-title\" data-testimonials-title>Amanda Silva</h4>\n",
+    "\n",
+    "                                <!-- comentário da testemunha -->\n",
+    "                                <div class=\"testimonials-text\" data-testimonials-text>\n",
+    "                                    <p>\n",
+    "                                        Danyelle is very creative in her projects. I always expect something more than planned. We created a database on beverage storage and dispatch and I was surprised by a panel to facilitate understanding. \n",
+    "                                    </p>\n",
+    "                                </div>\n",
+    "                            </div>\n",
+    "                        </li>\n",
+    "                    </ul>\n",
+    "                </section>\n",
     "            </article>\n",
-    "       </div>\n",
+    "            <!---------------------------------------------------------FIM DO ABOUT ----------------------------------------------------------------->\n",
     "\n",
+    "            <!-------------------------------------- INICIO DO RESUME ------------------------------------------------------------------------------->\n",
+    "\n",
+    "            <article class=\"resume\" data-page=\"resume\">\n",
+    "                <!-- titulo da pagina resumo -->\n",
+    "                <header>\n",
+    "                    <h2 class=\"h2 article-title\">Resume</h2>\n",
+    "                </header>\n",
+    "\n",
+    "                <!-- linha do tempo da formação -->\n",
+    "                <section class=\"timeline\">\n",
+    "\n",
+    "                    <!-- icone do livro -->\n",
+    "                    <div class=\"title-wrapper\">\n",
+    "                        <div class=\"icon-box\">\n",
+    "                            <ion-icon name=\"book-outline\"></ion-icon>\n",
+    "                        </div>\n",
+    "                        \n",
+    "                        <!-- titulo do icone ao lado -->\n",
+    "                        <h3 class=\"h3\">Education</h3>\n",
+    "                    </div>\n",
+    "\n",
+    "                    <ol class=\"timeline-list\">\n",
+    "\n",
+    "                        <!-- segunda formação -->\n",
+    "                        <li class=\"timeline-item\">\n",
+    "\n",
+    "                            <h4 class=\"h4 timeline-item-title\">Cruzeiro do Sul Virtual</h4>\n",
+    "                            <span>2021 - 2023</span>\n",
+    "\n",
+    "                            <p class=\"timeline-text\">\n",
+    "                                Postgraduate Lato Sensu - Specialization, Database and business intelligence.\n",
+    "                            </p>\n",
+    "\n",
+    "                        </li>\n",
+    "                        <!-- primeira formação -->\n",
+    "                        <li class=\"timeline-item\">\n",
+    "\n",
+    "                            <h4 class=\"h4 timeline-item-title\">Universidade Federal Rural de Pernambuco</h4>\n",
+    "              \n",
+    "                            <span>2014 — 2019</span>\n",
+    "              \n",
+    "                            <p class=\"timeline-text\">\n",
+    "                              Bachelor's degree, business administration. \n",
+    "                            </p>\n",
+    "              \n",
+    "                          </li>\n",
+    "                    </ol>\n",
+    "                </section>\n",
+    "\n",
+    "\n",
+    "                <!-- linha do tempo das experiências -->\n",
+    "                <section class=\"timeline\">\n",
+    "\n",
+    "                    <!-- icone do livro -->\n",
+    "                    <div class=\"title-wrapper\">\n",
+    "                        <div class=\"icon-box\">\n",
+    "                            <ion-icon name=\"book-outline\"></ion-icon>\n",
+    "                        </div>\n",
+    "                        \n",
+    "                        <!-- titulo do icone ao lado -->\n",
+    "                        <h3 class=\"h3\">Experience</h3>\n",
+    "                    </div>\n",
+    "\n",
+    "                    <ol class=\"timeline-list\">\n",
+    "\n",
+    "                        <!-- ultima experiencia -->\n",
+    "                        <li class=\"timeline-item\">\n",
+    "\n",
+    "                            <h4 class=\"h4 timeline-item-title\">Data technician</h4>\n",
+    "                            <span>2022 — Present</span>\n",
+    "\n",
+    "                            <p class=\"timeline-text\">\n",
+    "                                G4F - Great 4 the Future, Client CHESF.\n",
+    "                            </p>\n",
+    "\n",
+    "                        </li>\n",
+    "                        <!-- primeira experiencia -->\n",
+    "                        <li class=\"timeline-item\">\n",
+    "\n",
+    "                            <h4 class=\"h4 timeline-item-title\">Invoicing</h4>\n",
+    "              \n",
+    "                            <span>2015 — 2022</span>\n",
+    "              \n",
+    "                            <p class=\"timeline-text\">\n",
+    "                                Solivetti Comercio e Serviços LTDA.\n",
+    "                            </p>\n",
+    "              \n",
+    "                          </li>\n",
+    "                    </ol>\n",
+    "                </section>\n",
+    "\n",
+    "\n",
+    "                <!-- section Skills -->\n",
+    "                <section class=\"skill\">\n",
+    "                    <h3 class=\"h3 skills-title\">My Skills</h3>\n",
+    "\n",
+    "                    <ul class=\"skills-list content-card\">\n",
+    "                        <!-- PONTO 1 -->\n",
+    "                        <li class=\"skills-item\">\n",
+    "                            <div class=\"title-wrapper\">\n",
+    "                                <h5 class=\"h5\">Data analysis</h5>\n",
+    "                                <p> \n",
+    "                                    <span class=\"bullet-point\">&#9679;</span>BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.\n",
+    "                                </p> \n",
+    "                            </div>\n",
+    "                        </li>\n",
+    "                        <!-- PONTO 2 -->\n",
+    "                        <li class=\"skills-item\">\n",
+    "                            <div class=\"title-wrapper\">\n",
+    "                              <h5 class=\"h5\">Automation</h5>\n",
+    "                                <p> \n",
+    "                                  <span class=\"bullet-point\">&#9679;</span>Creating scripts in Python to automate repetitive tasks.\n",
+    "                                </p>  \n",
+    "                            </div>          \n",
+    "                        </li>\n",
+    "                        <!-- PONTO 3 -->\n",
+    "                        <li class=\"skills-item\">\n",
+    "                            <div class=\"title-wrapper\">\n",
+    "                              <h5 class=\"h5\">Workflow management</h5>\n",
+    "                                <p>\n",
+    "                                    <span class=\"bullet-point\">&#9679;</span> Creating and managing workflows in Airflow.\n",
+    "                                </p>\n",
+    "                            </div>\n",
+    "                        </li>\n",
+    "                        <!-- PONTO 4 -->\n",
+    "                        <li class=\"skills-item\">\n",
+    "                            <div class=\"title-wrapper\">\n",
+    "                              <h5 class=\"h5\">Proficiency in tools</h5>\n",
+    "                                <p>\n",
+    "                                    <span class=\"bullet-point\">&#9679;</span> SQL, Python, VBA, SAP PM, PostgreSQL, Airflow, Tableau, Power BI.\n",
+    "                                </p>\n",
+    "                            </div>\n",
+    "                        </li>\n",
+    "                    </ul>\n",
+    "                </section>\n",
+    "            </article>\n",
+    "\n",
+    "            <!-------------------------FIM DO RESUMO ------------------------------------------------------------------------------------->\n",
+    "\n",
+    "            <!--------------------------------------------INICIO DO PORTIFOLIO ----------------------------------------------------------->\n",
+    "        </div>\n",
+    "\n",
+    "    \n",
     "    </main>\n",
     "</body>"
    ]
