--- a/index_test.ipynb
+++ b/index_test.ipynb
@@ -447,7 +447,7 @@
     "                        <!-- PONTO 1 -->\n",
     "                        <li class=\"skills-item\">\n",
     "                            <div class=\"title-wrapper\">\n",
-    "                                <h5 class=\"h5\">Data analysis</h5>\n",
+    "                                <h5 class=\"h5 styled-title\">Data analysis</h5>\n",
     "                                <p> \n",
     "                                    <span class=\"bullet-point\">&#9679;</span>BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.\n",
     "                                </p> \n",
@@ -456,7 +456,7 @@
     "                        <!-- PONTO 2 -->\n",
     "                        <li class=\"skills-item\">\n",
     "                            <div class=\"title-wrapper\">\n",
-    "                              <h5 class=\"h5\">Automation</h5>\n",
+    "                              <h5 class=\"h5 styled-title\">Automation</h5>\n",
     "                                <p> \n",
     "                                  <span class=\"bullet-point\">&#9679;</span>Creating scripts in Python to automate repetitive tasks.\n",
     "                                </p>  \n",
@@ -465,7 +465,7 @@
     "                        <!-- PONTO 3 -->\n",
     "                        <li class=\"skills-item\">\n",
     "                            <div class=\"title-wrapper\">\n",
-    "                              <h5 class=\"h5\">Workflow management</h5>\n",
+    "                              <h5 class=\"h5 styled-title\">Workflow management</h5>\n",
     "                                <p>\n",
     "                                    <span class=\"bullet-point\">&#9679;</span> Creating and managing workflows in Airflow.\n",
     "                                </p>\n",
@@ -474,7 +474,7 @@
     "                        <!-- PONTO 4 -->\n",
     "                        <li class=\"skills-item\">\n",
     "                            <div class=\"title-wrapper\">\n",
-    "                              <h5 class=\"h5\">Proficiency in tools</h5>\n",
+    "                              <h5 class=\"h5 styled-title\">Proficiency in tools</h5>\n",
     "                                <p>\n",
     "                                    <span class=\"bullet-point\">&#9679;</span> SQL, Python, VBA, SAP PM, PostgreSQL, Airflow, Tableau, Power BI.\n",
     "                                </p>\n",
