--- a/index_test.ipynb
+++ b/index_test.ipynb
@@ -449,7 +449,7 @@
     "                            <div class=\"title-wrapper\">\n",
     "                                <h5 class=\"h5 styled-title\">Data analysis</h5>\n",
     "                                <p> \n",
-    "                                    <span class=\"bullet-point\">&#9679;</span>BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.\n",
+    "                                    BI,data extraction with VBA and Python from SAP PM, selects in PostgreSQL, creation of dashboards and reports.\n",
     "                                </p> \n",
     "                            </div>\n",
     "                        </li>\n",
@@ -458,7 +458,7 @@
     "                            <div class=\"title-wrapper\">\n",
     "                              <h5 class=\"h5 styled-title\">Automation</h5>\n",
     "                                <p> \n",
-    "                                  <span class=\"bullet-point\">&#9679;</span>Creating scripts in Python to automate repetitive tasks.\n",
+    "                                    Creating scripts in Python to automate repetitive tasks.\n",
     "                                </p>  \n",
     "                            </div>          \n",
     "                        </li>\n",
@@ -467,7 +467,7 @@
     "                            <div class=\"title-wrapper\">\n",
     "                              <h5 class=\"h5 styled-title\">Workflow management</h5>\n",
     "                                <p>\n",
-    "                                    <span class=\"bullet-point\">&#9679;</span> Creating and managing workflows in Airflow.\n",
+    "                                    Creating and managing workflows in Airflow.\n",
     "                                </p>\n",
     "                            </div>\n",
     "                        </li>\n",
@@ -476,7 +476,7 @@
     "                            <div class=\"title-wrapper\">\n",
     "                              <h5 class=\"h5 styled-title\">Proficiency in tools</h5>\n",
     "                                <p>\n",
-    "                                    <span class=\"bullet-point\">&#9679;</span> SQL, Python, VBA, SAP PM, PostgreSQL, Airflow, Tableau, Power BI.\n",
+    "                                    SQL, Python, VBA, SAP PM, PostgreSQL, Airflow, Tableau, Power BI.\n",
     "                                </p>\n",
     "                            </div>\n",
     "                        </li>\n",
